--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
-hello, world
+<!DOCTYPE html>
+<!-- HTML5 Mobile Boilerplate -->
+<!--[if IEMobile 7]><html class="no-js iem7"><![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--><html class="no-js" lang="en"><!--<![endif]-->
+
+<!-- HTML5 Boilerplate -->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+
+<head>
+
+	<meta charset="utf-8">
+	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	<title>Nocchka</title>
+	<meta name="description" content="Nocchka">
+	<meta name="keywords" content="Nocch, Nocchka, Елена Ночь, Elena, Елена">
+
+	<meta http-equiv="cleartype" content="on">
+
+	<link rel="shortcut icon" href="/favicon.ico">
+
+	<!-- Responsive and mobile friendly stuff -->
+	<meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320">
+	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="css/html5reset.css" media="all">
+	<link rel="stylesheet" href="css/responsivegridsystem.css" media="all">
+	<link rel="stylesheet" href="css/col.css" media="all">
+	<link rel="stylesheet" href="css/3cols.css" media="all">
+	
+	<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements and feature detects -->
+	<script src="js/modernizr-2.5.3-min.js"></script>
+
+
+
+</head>
+
+<body>
+
+<div id="skiptomain"><a href="#maincontent">skip to main content</a></div>
+
+<div id="wrapper">
+	<div id="headcontainer">
+		<header>
+		<h1><img src="./images/nocchka.jpg" alt="" width="120px">Елена Ночь</h1>
+		<p class="introtext">Лучший способ со мной связаться - письмо на nocch@ya.ru</p>
+		</header>
+	</div>
+	<div id="maincontentcontainer">
+		<div id="maincontent">
+
+			
+			<div class="section group example">
+			</div>
+
+			<div class="section group">
+				<div class="col span_1_of_3">
+<p>8-926-147-43-71- основной номер телефона</p>
+<p>8-926-947-15-90 - второй номер телефона</p>
+<p>Nocchka - аккаунт Skype</p>
+
+				</div>
+				<div class="col span_1_of_3">
+<p>мой основной сайт — <b>этот!</b></p>
+<p><a href="html://nocchka.livejournal.ru">nocchka.livejournal.ru</a></p>
+<a href="http://www.proza.ru/avtor/nocch"><img src="http://www.proza.ru/images/author88x31.gif" border="1" alt="Елена Ноччь на сервере Проза.ру" width="88" height="31"></a>&nbsp;
+<a href="http://www.stihi.ru/avtor/nocch"><img src="http://www.stihi.ru/images/author88x31.gif" border="1" alt="Елена Ноччь на сервере Стихи.ру" width="88" height="31"></a>&nbsp; 
+
+
+
+				</div>
+				<div class="col span_1_of_3">
+<p>ВНИМАНИЕ! nocch.ru - <b>НЕ моё.</b></p>
+<p>Мои аккаунты в соцсетях:&nbsp; <a href="http://www.facebook.com/people/%D0%95%D0%BB%D0%B5%D0%BD%D0%B0-%D0%9A%D0%B0%D0%BC%D1%8B%D0%BD%D0%B8%D0%BD%D0%B0/100001187234265">facebook</a>,&nbsp;<a href="http://vk.com/nocch">vk</a>,&nbsp;<a href="https://twitter.com/Nocchka">twitter</a>,&nbsp;<a href="https://www.free-lance.ru/users/nocch/">free-lance</a>
+				</div>
+			</div>
+
+			
+			
+
+			
+
+
+		</div>
+	</div>
+	<div id="footercontainer">
+		<footer class="group">
+			
+
+   			<br class="breaker" />
+
+			<div id="smallprint">
+			<img src="./images/rose.gif" width="40" height="50" alt="html5" />
+			<img src="./images/kitten.gif" width="40" height="50" alt="css3" />
+			<br />
+			<span class="heart">&hearts;</span> Nocchka&nbsp;&nbsp;&nbsp;&nbsp;
+			</div>
+
+		</footer>
+	</div>
+</div>
+
+
+
+	<!-- JavaScript at the bottom for fast page loading -->
+
+	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+
+	<!--[if (lt IE 9) & (!IEMobile)]>
+	<script src="js/selectivizr-min.js"></script>
+	<![endif]-->
+
+
+	<!-- More Scripts-->
+	<script src="js/responsivegridsystem.js"></script>
+
+
+</body>
+</html>
