--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
 
 <body>
 
-<div id="skiptomain"><a href="#maincontent">skip to main content</a></div>
-
 <div id="wrapper">
 	<div id="headcontainer">
 		<header>
-		<h1><img src="./images/nocchka.jpg" alt="" width="120px">Елена Ночь</h1>
+		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;&nbsp;&nbsp;Елена Ночь</h1>
 		<p class="introtext">Лучший способ со мной связаться - письмо на nocch@ya.ru</p>
 		</header>
 	</div>
