--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="wrapper">
 	<div id="headcontainer">
 		<header>
-		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;&nbsp;&nbsp;Елена Ночь</h1>
+		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;Елена Ночь</h1>
 		<p class="introtext">Лучший способ со мной связаться - письмо на nocch@ya.ru</p>
 		</header>
 	</div>
