--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 				<div class="col span_1_of_3">
 <p>ВНИМАНИЕ! nocch.ru - <b>НЕ моё.</b></p>
 <p>Мои аккаунты в соцсетях:&nbsp; <a href="http://www.facebook.com/people/%D0%95%D0%BB%D0%B5%D0%BD%D0%B0-%D0%9A%D0%B0%D0%BC%D1%8B%D0%BD%D0%B8%D0%BD%D0%B0/100001187234265">facebook</a>,&nbsp;<a href="http://vk.com/nocch">vk</a>,&nbsp;<a href="https://twitter.com/Nocchka">twitter</a>,&nbsp;<a href="https://www.free-lance.ru/users/nocch/">free-lance</a>
+<p>У меня живет немного птичек вида <a href="http://myquail.ru">Китайский расписной перепел</a></p>
 				</div>
 			</div>
 
