--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div id="wrapper">
 	<div id="headcontainer">
 		<header>
-		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;Елена Ночь</h1>
-		<p class="introtext">Лучший способ со мной связаться - письмо на nocch@ya.ru</p>
+		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;Елена Камынина (Елена Ночь)</h1>
+		<p class="introtext">+79261474371<br />nocchka@gmail.ru</p>
 		</header>
 	</div>
 	<div id="maincontentcontainer">
@@ -59,23 +59,20 @@
 
 			<div class="section group">
 				<div class="col span_1_of_3">
-<p>8-926-147-43-71- основной номер телефона</p>
-<p>Nocchka - аккаунт Skype</p>
-
-				</div>
-				<div class="col span_1_of_3">
-<p>мой основной сайт — <b>этот!</b></p>
-<p><a href="html://nocchka.livejournal.ru">nocchka.livejournal.ru</a></p>
-<a href="http://www.proza.ru/avtor/nocch"><img src="http://www.proza.ru/images/author88x31.gif" border="1" alt="Елена Ноччь на сервере Проза.ру" width="88" height="31"></a>&nbsp;
-<a href="http://www.stihi.ru/avtor/nocch"><img src="http://www.stihi.ru/images/author88x31.gif" border="1" alt="Елена Ноччь на сервере Стихи.ру" width="88" height="31"></a>&nbsp; 
-
+<p>Skype: nocchka
+     - </p>
 
 
 				</div>
 				<div class="col span_1_of_3">
-<p>ВНИМАНИЕ! nocch.ru - <b>НЕ моё.</b></p>
-<p>Мои аккаунты в соцсетях:&nbsp; <a href="http://www.facebook.com/people/%D0%95%D0%BB%D0%B5%D0%BD%D0%B0-%D0%9A%D0%B0%D0%BC%D1%8B%D0%BD%D0%B8%D0%BD%D0%B0/100001187234265">facebook</a>,&nbsp;<a href="http://vk.com/nocch">vk</a>,&nbsp;<a href="https://twitter.com/Nocchka">twitter</a>,&nbsp;<a href="https://www.free-lance.ru/users/nocch/">free-lance</a>
-<p>Консультирую по вопросам содержания и разведения птиц вида <a href="http://myquail.ru">Китайский расписной перепел</a></p>
+<p>Telegram: nocchka </p>
+
+
+
+
+				</div>
+				<div class="col span_1_of_3">
+<p>Instagram: myquailt4kru</p>
 				</div>
 			</div>
 
@@ -94,10 +91,8 @@
    			<br class="breaker" />
 
 			<div id="smallprint">
-			<img src="./images/rose.gif" width="40" height="50" alt="html5" />
+			
 			<img src="./images/kitten.gif" width="40" height="50" alt="css3" />
-			<br />
-			<span class="heart">&hearts;</span> Nocchka&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
 
 		</footer>
