--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="wrapper">
 	<div id="headcontainer">
 		<header>
-		<h1><img src="./images/nocchka.jpg" alt="" width="120px">&nbsp;Елена Камынина (Елена Ночь)</h1>
+		<h1>Елена Ночь</h1>
 		<p class="introtext">+79261474371<br />nocchka@gmail.ru</p>
 		</header>
 	</div>
