--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
 			<div class="section group">
 				<div class="col span_1_of_3">
-<p>Skype: nocchka
-     - </p>
+<p>Skype: nocchka</p>
 
 
 				</div>
@@ -92,7 +91,7 @@
 
 			<div id="smallprint">
 			
-			<img src="./images/kitten.gif" width="40" height="50" alt="css3" />
+			
 			</div>
 
 		</footer>
