--- a/zaglushka/index.html
+++ b/zaglushka/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css" script src="assets/js/pack.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <style>
-    a{cursor:pointer}a:hover{text-decoration:none}html{width:100%;margin:0;padding:0;font-family:lg_smartlight;font-weight:400;-webkit-font-smoothing:antialiased}img{max-width:100%;display:block}body{margin:0;padding:0;font-family:lg_smartlight,Arial;font-weight:400;font-size:20px;background:#000}.lgcentr{margin:8% auto;text-align:center}div{color:#454545;font-family:lg_smartlight,Arial;font-size:25px}.lgcentr h1,div{font-weight:400;-webkit-font-smoothing:antialiased}.lgcentr h1{font-family:lg_smartbold;font-size:8vh;line-height:8vh;color:#f4f4f4}.footer{position:absolute;bottom:20px;left:50%;margin-left:-190px;font-family:lg_smartlight,Arial;font-weight:400;font-size:14px;color:#585858}.div-visible{display:block}.div-hidden,.div-hidden2{display:none}@media only screen and (max-width:992px){.div-visible{display:none}.div-hidden{display:block}.div-hidden2{display:none}div{color:#ccc}}@media only screen and (max-width:768px){.div-hidden,.div-visible{display:none}.div-hidden2{display:block}.lgcentr{margin:1% auto}}@media only screen and (max-width:992px){.lgTimer .etUnit .etNumber{width:20px;font-size:1vh}}@media only screen and (min-width:1200px){#hidepopup{color:#ff5722;font-size:40px;position:absolute;top:40px;right:100px}.grayfooter{background-color:inherit}}
+    a{cursor:pointer}a:hover{text-decoration:none}html{width:100%;margin:0;padding:0;font-family:lg_smartlight;font-weight:400;-webkit-font-smoothing:antialiased}
+    img{max-width:100%;display:block}body{margin:0;padding:0;font-family:lg_smartlight,Arial;font-weight:400;font-size:20px;background:#000}.lgcentr{margin:8% auto;text-align:center}
+    div{color:#454545;font-family:lg_smartlight,Arial;font-size:25px}.lgcentr h1,div{font-weight:400;-webkit-font-smoothing:antialiased}.lgcentr h1{font-family:lg_smartbold;font-size:8vh;line-height:8vh;color:#f4f4f4}.footer{position:absolute;width:100%;bottom:20px;font-family:lg_smartlight,Arial;font-weight:400;font-size:14px;color:#585858}.footer-centr{margin:0 auto; padding: 0 5px;}.div-visible{display:block}.div-hidden,.div-hidden2{display:none}@media only screen and (max-width:992px){.div-visible{display:none}.div-hidden{display:block}.div-hidden2{display:none}div{color:#ccc}}@media only screen and (max-width:768px){.div-hidden,.div-visible{display:none}.div-hidden2{display:block}.lgcentr{margin:1% auto}}@media only screen and (max-width:992px){.lgTimer .etUnit .etNumber{width:20px;font-size:1vh}}@media only screen and (min-width:1200px){#hidepopup{color:#ff5722;font-size:40px;position:absolute;top:40px;right:100px}.grayfooter{background-color:inherit}}
     /*# sourceMappingURL=../map/style.css.map */
 
     </style>
@@ -28,7 +30,7 @@
         <div class="lgTimer3"></div>
       </div>
     </div>
-    <p class="footer">* Подробные правила конкурса будут опубликованы на сайте 24.11.2016</p>
+    <div class="footer"><p class="footer-centr">* Подробные правила конкурса будут опубликованы на сайте 24.11.2016</p></div>
   </body>
   <footer></footer>
   <!--footer.jade-->
