--- a/changebrowser/index.html
+++ b/changebrowser/index.html
@@ -38,6 +38,25 @@
          font-size: 3.5vh;
     }
 }
+      @media only screen and (max-width: 768px){
+        .brimg p { 
+         font-size: 2.5vh;
+    } 
+    .brimg {
+        width: 14%;
+        margin: 3%;
+    }
+     img.brimg {
+        width: 14%;
+        height: 9%;
+        margin: auto;
+    }
+     .browserimg {
+        width: 98%;
+        margin: 0 auto;
+    }
+    
+}
     </style>
   </head>
 
