--- a/changebrowser/index.html
+++ b/changebrowser/index.html
@@ -41,9 +41,11 @@
       @media only screen and (max-width: 768px){
         .brimg p { 
          font-size: 2.5vh;
+         padding: 5%;
     } 
     .brimg {
         width: 14%;
+        height: 9%;
         margin: 3%;
     }
      img.brimg {
@@ -54,6 +56,7 @@
      .browserimg {
         width: 98%;
         margin: 0 auto;
+        height: 9%;
     }
     
 }
