--- a/changebrowser/index.html
+++ b/changebrowser/index.html
@@ -71,19 +71,19 @@
       <p class="ott">
         Для того, чтобы использовать все возможности сайта,<br>загрузите и установите один из этих браузеров:
       </p>
-      <div class="browserimg"><a href="" id="chrome">
+      <div class="browserimg"><a href="https://www.google.ru/chrome/browser/" id="chrome">
           <div class="brimg"><img src="br1.png">
             <p>Google Chrome</p>
-          </div></a><a href="" id="mozilla">
+          </div></a><a href="https://www.mozilla.org/ru/firefox/new/" id="mozilla">
           <div class="brimg"><img src="br2.png">
             <p>Mozilla Firefox</p>
-          </div></a><a href="" id="ie">
+          </div></a><a href="https://support.microsoft.com/ru-ru/help/17621/internet-explorer-downloads" id="ie">
           <div class="brimg"><img src="br3.png">
             <p>Internet Explorer</p>
-          </div></a><a href="" id="safari">
+          </div></a><a href="https://support.apple.com/ru-ru/HT204416" id="safari">
           <div class="brimg"><img src="br4.png">
             <p>Apple Safari</p>
-          </div></a><a href="" id="opera">
+          </div></a><a href="http://www.opera.com/ru/download" id="opera">
           <div class="brimg"><img src="br5.png">
             <p>Opera</p>
           </div></a></div>
