--- a/elvis/index.html
+++ b/elvis/index.html
@@ -23,7 +23,7 @@
     <!--end header.jade-->
     <div id="container">
       <div class="container">
-        <div class="cocoen"><img src="../assets/img/bg.png"><img src="../assets/img/bg1.png"></div>
+        <div class="cocoen"><img src="./assets/img/bg.png"><img src="./assets/img/bg1.png"></div>
       </div>
     </div>
     <div id="titlecontainer">
