--- a/elvis/index.html
+++ b/elvis/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://specialmoments.ru/x-series/css/fonts.css">
     <script src="//code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="assets/js/pack.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
   </head>
   <!--end head.jade-->
