--- a/zaglushka/index.html
+++ b/zaglushka/index.html
@@ -19,7 +19,7 @@
   <!--end head.jade-->
   <body>
     <div class="lgcentr">
-      <h1>До начала<br>интеллектуальной викторины<br>осталось</h1>
+      <h1>До начала<br>конкурса<br>осталось</h1>
       <div class="div-visible">
         <div class="lgTimer"></div>
       </div>
@@ -30,7 +30,7 @@
         <div class="lgTimer3"></div>
       </div>
     </div>
-    <div class="footer"><p class="footer-centr">* Подробные правила конкурса будут опубликованы на сайте 24.11.2016</p></div>
+    <div class="footer"><p class="footer-centr">* Подробные правила конкурса будут опубликованы на сайте 24.11.2040</p></div>
   </body>
   <footer></footer>
   <!--footer.jade-->
