--- a/zaglushka/index.html
+++ b/zaglushka/index.html
@@ -19,7 +19,7 @@
   <!--end head.jade-->
   <body>
     <div class="lgcentr">
-      <h1>До начала<br>конкурса<br>осталось</h1>
+      <h1>До начала конкурса<br>осталось</h1>
       <div class="div-visible">
         <div class="lgTimer"></div>
       </div>
