--- a/mvid-lg-promo/index.html
+++ b/mvid-lg-promo/index.html
@@ -424,7 +424,7 @@
         
       <div class="row  pad50b">
           <div class="col-lg-4 col-lg-offset-2 col-md-4  col-md-offset-2 col-sm-12 col-xs-12">
-          <img src="mvid-lg-promo/img/kontrol4.jpg" class="img-responsive">
+          <img src="img/kontrol4.jpg" class="img-responsive">
         </div>
               <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <h2>Быстрое подключение</h2>
