--- a/problem-skroll/index.html
+++ b/problem-skroll/index.html
@@ -98,34 +98,34 @@
                     <div class="slider-point"></div>
                     <div class="prod-img-slider-top owl-carousel">
                         <div class="prod-item" data-model="0">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH6G1BCH2N.png?v=17" alt="FH6G1BCH2N">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH6G1BCH2N.png?v=17" alt="FH6G1BCH2N">
                         </div>
                         <div class="prod-item" data-model="1">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH6G1BCH6N.png?v=17" alt="FH6G1BCH6N">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH6G1BCH6N.png?v=17" alt="FH6G1BCH6N">
                         </div>
                         <div class="prod-item" data-model="2">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH495BDS2.png?v=17" alt="FH495BDS2">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH495BDS2.png?v=17" alt="FH495BDS2">
                         </div>
                         <div class="prod-item" data-model="3">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH495BDS6.png?v=17" alt="FH495BDS6">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH495BDS6.png?v=17" alt="FH495BDS6">
                         </div>
                         <div class="prod-item" data-model="4">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH695BDH6N.png?v=17" alt="FH695BDH6N">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH695BDH6N.png?v=17" alt="FH695BDH6N">
                         </div>
                         <div class="prod-item" data-model="5">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/F1K2CH2T.png?v=17" alt="F1K2CH2T">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/F1K2CH2T.png?v=17" alt="F1K2CH2T">
                         </div>
                         <div class="prod-item" data-model="6">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/TW7000DS.png?v=17" alt="TW7000DS">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/TW7000DS.png?v=17" alt="TW7000DS">
                         </div>
                         <div class="prod-item" data-model="7">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/FH6G1BCH2N.png?v=17" alt="FH4G1JCH2N">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/FH6G1BCH2N.png?v=17" alt="FH4G1JCH2N">
                         </div>
                         <div class="prod-item" data-model="8">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/TW4J8JH2W.png?v=1" alt="TW4J8JH2W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/TW4J8JH2W.png?v=1" alt="TW4J8JH2W">
                         </div>
                         <div class="prod-item" data-model="9">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-top/TW4J7VS2W.png?v=1" alt="TW4J7VS2W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-top/TW4J7VS2W.png?v=1" alt="TW4J7VS2W">
                         </div>
                     </div>
                 </div>
@@ -172,10 +172,10 @@
                                 <div class="wtb-wrap appear">
                                     <div class="cont-inner-row clearfix">
                                         <div class="cont-inner-col">
-                                            <a href="https://lg.com/ru/products/wtb?modelId=MD05898576" target="_blank" class="lg-button wtb-popup-top-button">Где купить</a>
+                                            <a href="rrrrrrr/ru/products/wtb?modelId=MD05898576" target="_blank" class="lg-button wtb-popup-top-button">Где купить</a>
                                         </div>
                                         <div class="cont-inner-col">
-                                            <a href="https://lg.com/ru/washing-machines/lg-FH6G1BCH2N" target="_blank" class="tech">Технические характеристики <img src="https://lg.com/ru/washing-machines/twinwash/img/arrow-right-white.svg" alt=""></a>
+                                            <a href="rrrrrrr/ru/washing-machines/lg-FH6G1BCH2N" target="_blank" class="tech">Технические характеристики <img src="rrrrrrr/ru/washing-machines/twinwash/img/arrow-right-white.svg" alt=""></a>
                                         </div>
                                     </div>
                                 </div>
@@ -202,34 +202,34 @@
                 <div class="img-col">
                     <div class="prod-img-slider-bottom owl-carousel">
                         <div class="prod-item" data-model="0">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
                         </div>
                         <div class="prod-item" data-model="1">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
                         </div>
                         <div class="prod-item" data-model="2">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
                         </div>
                         <div class="prod-item" data-model="3">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
                         </div>
                         <div class="prod-item" data-model="4">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI6.png?v=17" alt="TW206W">
                         </div>
                         <div class="prod-item" data-model="5">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/TW350W.png?v=17" alt="TW351W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/TW350W.png?v=17" alt="TW351W">
                         </div>
                         <div class="prod-item" data-model="6">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/TW350W.png?v=17" alt="TW351W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/TW350W.png?v=17" alt="TW351W">
                         </div>
                         <div class="prod-item" data-model="7">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
                         </div>
                         <div class="prod-item" data-model="8">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
                         </div>
                         <div class="prod-item" data-model="9">
-                            <img src="https://lg.com/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
+                            <img src="rrrrrrr/ru/washing-machines/twinwash/img/product-bottom/FH8G1MINI2.png?v=17" alt="TW202W">
                         </div>
                     </div>
                 </div>
@@ -282,10 +282,10 @@
                     <div class="wtb-wrap appear ">
                         <div class="cont-inner-row clearfix">
                             <div class="cont-inner-col">
-                                <a href="https://lg.com/ru/products/wtb?modelId=MD05910456" target="_blank" class="lg-button wtb-popup-bottom-button">oooooooooo</a>
+                                <a href="rrrrrrr/ru/products/wtb?modelId=MD05910456" target="_blank" class="lg-button wtb-popup-bottom-button">oooooooooo</a>
                             </div>
                             <div class="cont-inner-col">
-                                <a href="https://lg.com/ru/washing-machines/lg-TW202W" target="_blank" class="tech">щщщщщщщщ <img src="https://lg.com/ru/washing-machines/twinwash/img/arrow-right-white.svg" alt=""></a>
+                                <a href="rrrrrrr/ru/washing-machines/lg-TW202W" target="_blank" class="tech">щщщщщщщщ <img src="rrrrrrr/ru/washing-machines/twinwash/img/arrow-right-white.svg" alt=""></a>
                             </div>
                         </div>
                     </div>
