--- a/problem-skroll/index.html
+++ b/problem-skroll/index.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="css/animate.min.css?v=17">
     <link rel="stylesheet" href="css/style.css?v=26">
    
-
+<style>
+.appear-wrap {
+overflow-y: hidden;
+}    
+</style>
 </head>
 
 <body class="fixed">
