--- a/problem-skroll/index.html
+++ b/problem-skroll/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="css/style.css?v=26">
    
 <style>
-.appear-wrap {
+.prod-list-block {
 overflow-y: hidden;
-}    
+}  
 </style>
 </head>
 
