--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,6 +30,7 @@
         <a href="http://nocchka.ru/learn-front-end-maket1">3</a><br>
         <a href="http://myquail.ru/fc/">4</a><br>
         <a href="http://svjaznoi-test.lndg.ru/">5</a><br>
+        <a href="http://nocchka.ru/cordzero-animation/">6</a><br>
 	</section>
 				
 </div>
