--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,7 +31,7 @@
         <a href="http://myquail.ru/fc/">4</a><br>
         <a href="http://svjaznoi-test.lndg.ru">5</a><br>
         <a href="http://nocchka.ru/cordzero-animation">6</a><br>
-        <a href="http://nocchka.ru/kak-vybr">7</a><br>
+        <!--<a href="http://nocchka.ru/kak_vybr">7</a><br>-->
 	</section>
 				
 </div>
