--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,12 +25,12 @@
 <div class="page-outer">
 <div class="page-wrapper" style="font-size:50px;">
 	<section class="banner">
-		<a href="http://nocchka.ru/zaglushka">1</a><br>
-        <a href="http://nocchka.ru/football-lg">2</a><br>
-        <a href="http://nocchka.ru/learn-front-end-maket1">3</a><br>
-        <a href="http://myquail.ru/fc/">4</a><br>
-        <a href="http://svjaznoi-test.lndg.ru">5</a><br>
-        <a href="http://nocchka.ru/cordzero-animation">6</a><br>
+		<a href="http://nocchka.lndg.ru/zaglushka">1 - заглушка</a><br>
+        <a href="http://nocchka.lndg.ru/football-lg">2 -футбол </a><br>
+        <a href="http://nocchka.lndg.ru/learn-front-end-maket1">3 - телефончики</a><br>
+        <a href="http://myquail.lndg.ru/fc/">4 -  fc</a><br>
+        <a href="http://svjaznoi-test.lndg.ru">5 - тестовое связной </a><br>
+        <a href="http://nocchka.lndg.ru/cordzero-animation">6 кордзиро, css анимация</a><br>
         <!--<a href="http://nocchka.ru/kak_vybr">7</a><br>-->
 	</section>
 				
