--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,11 +26,12 @@
 <div class="page-wrapper" style="font-size:50px;">
 	<section class="banner">
 		<a href="http://nocchka.lndg.ru/zaglushka">1 - заглушка</a><br>
-        <a href="http://nocchka.lndg.ru/football-lg">2 -футбол </a><br>
-        <a href="http://nocchka.lndg.ru/learn-front-end-maket1">3 - телефончики</a><br>
-        <a href="http://myquail.lndg.ru/fc/">4 -  fc</a><br>
-        <a href="http://svjaznoi-test.lndg.ru">5 - тестовое связной </a><br>
-        <a href="http://nocchka.lndg.ru/cordzero-animation">6 кордзиро, css анимация</a><br>
+        <a href="https://nocchka.lndg.ru/football-lg">2 -футбол </a><br>
+        <a href="https://nocchka.lndg.ru/learn-front-end-maket1">3 - телефончики</a><br>
+        <a href="https://myquail.lndg.ru/fc/">4 -  fc</a><br>
+        <a href="https//svjaznoi-test.lndg.ru">5 - тестовое связной </a><br>
+        <a href="https://nocchka.lndg.ru/cordzero-animation">6 кордзиро, css анимация</a><br>
+	<a href="https://birdnews.lndg.ru/">7 новостной портал о птицах</a><br>	
         <!--<a href="http://nocchka.ru/kak_vybr">7</a><br>-->
 	</section>
 				
