--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 			<div class="section group">
 				<div class="col span_1_of_3">
-<p>Skype: nocchka</p>
+<p>t: nocchka</p>
 
 
 				</div>
@@ -71,7 +71,7 @@
 
 				</div>
 				<div class="col span_1_of_3">
-<p>Instagram: myquailt4kru</p>
+<p>i: nocchka</p>
 				</div>
 			</div>
 
